==> davideferrario/TommRo/libs/02_tommRoCHw/template/bus/env/arm/STM32/tommRoCHwTemplateBusEnvironmentSPIMaster.c <==
#include "bus/env/tommRoCHwTemplateBusEnvironmentSPIMaster.h"
#include "env/tommRoCTemplateEnv.h"
#include "TOMMROC.h"
#include "bus/common/spi/master/tommRoCHwTemplateBusCommonSPIMasterCb.h"
#include "bus/env/arm/STM32/spi/tommRoCHwTemplateBusSPISTM32DEF.h"
#include "bus/env/arm/STM32/spi/tommRoCHwTemplateBusSPISTM32Hal.h"
#include "TOMMROCMw.h"
#include "TOMMROCMwTemplate.h"
#include "spi.h"
#define __SPI_SINGLE_TRANSFER_MAX_SIZE_BYTE__   (8)
#define __EMPTY___stm32_callback_data_t____                 \
{                                                           \
    /* .transferCompleteCbCalled */ false,                  \
    /* .state */                    HAL_SPI_STATE_ERROR,    \
    /* .errorCbCalled */            false,                  \
    /* .errorCode */                HAL_SPI_ERROR_NONE,     \
}
#define __EMPTY___tommRoC_hw_spi_master_handle_t____                        \
{                                                                           \
    /* .spiPtr */               NULL,                                       \
    /* .stm32CallbackData */    __EMPTY___stm32_callback_data_t____,        \
    /* .syncSem */              __EMPTY_tommRoC_mw_template_semaphore_t__,  \
}

static tommRoC_hw_err_enum_t _wait_for_transfer_complete(
                __tommRoC_hw_spi_master_handle_t__* const   spiHandlePtr,
        const   uint32_t                                    timeoutMsec) {

    SPI_HandleTypeDef* spiPtr = (SPI_HandleTypeDef*) spiHandlePtr->spiPtr;

#if !defined (__TOMMROC_MW_SEMAPHORE_TEMPLATE_IS_USED__)
    tommRoC_timer_t timer;
    uint32_t elapsedMsec;
#endif

#if defined (__TOMMROC_MW_SEMAPHORE_TEMPLATE_IS_USED__)

    if (TOMMRO_C_MW_ERR_SUCCESS == tommRoCMwSemaphoreWait(&spiHandlePtr->syncSem, timeoutMsec)) {
        if (spiHandlePtr->stm32CallbackData.transferCompleteCbCalled) {
            if (HAL_SPI_STATE_READY == spiHandlePtr->stm32CallbackData.state) {
                return TOMMRO_C_HW_ERR_SUCCESS;
            }
        }

        if (spiHandlePtr->stm32CallbackData.errorCbCalled) {
            return TOMMRO_C_HW_BUS_OPERATION_FAIL_ERR;
        }
    }

    // NOTE: in case of timeout expired, check again if SUCCESS because it could be the case in multitask environment
    if ((spiHandlePtr->stm32CallbackData.transferCompleteCbCalled) && (HAL_SPI_STATE_READY == spiHandlePtr->stm32CallbackData.state)) {
        return TOMMRO_C_HW_ERR_SUCCESS;
    }

    if (!spiHandlePtr->stm32CallbackData.transferCompleteCbCalled && !spiHandlePtr->stm32CallbackData.errorCbCalled) {
        HAL_SPI_Abort_IT(spiPtr);
    }

    return TOMMRO_C_HW_BUS_OPERATION_FAIL_ERR;
#else

    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCTimerStart(&timer, timeoutMsec));

    do {

        if (spiHandlePtr->stm32CallbackData.transferCompleteCbCalled) {
            if (HAL_SPI_STATE_READY == spiHandlePtr->stm32CallbackData.state) {
                return TOMMRO_C_HW_ERR_SUCCESS;
            }
            else {
                break;
            }
        }

        if (spiHandlePtr->stm32CallbackData.errorCbCalled) {
            return TOMMRO_C_HW_BUS_OPERATION_FAIL_ERR;
        }

        TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCTimerElapsed(&timer, &elapsedMsec));

        if (elapsedMsec > 1) {
            TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCOsDelayMsec(1));
        }
        else {
            // NOTE: don't replace with tommRoCOsDelayMsec(0) because as fast as possible is needed in case of single task project.
#if defined (__TOMMROC_MW_THREAD_TEMPLATE_IS_USED__)
            tommRoCMwThreadYield();
#endif
        }

    } while (TOMMRO_C_TIMER_NOT_EXPIRED_ERR == tommRoCTimerIsExpired(&timer));
    
    // NOTE: in case of timeout expired, check again if SUCCESS because it could be the case in multitask environment
    if ((spiHandlePtr->stm32CallbackData.transferCompleteCbCalled) && (HAL_SPI_STATE_READY == spiHandlePtr->stm32CallbackData.state)) {
        return TOMMRO_C_HW_ERR_SUCCESS;
    }

    if (!spiHandlePtr->stm32CallbackData.transferCompleteCbCalled && !spiHandlePtr->stm32CallbackData.errorCbCalled) {
        HAL_SPI_Abort_IT(spiPtr);
    }

    return TOMMRO_C_HW_BUS_OPERATION_FAIL_ERR;
#endif
}

static tommRoC_hw_err_enum_t _spi_master_write_transfer(
                __tommRoC_hw_spi_master_handle_t__* const   spiHandlePtr,
        const   uint8_t*                            const   writeBufferPtr,
        const   uint16_t                                    writeBufferLen,
        const   uint32_t                                    timeoutMsec) {

    uint8_t* ptr;
    uint16_t remaining;
    uint16_t wrAmount;

    ptr         = (uint8_t*) writeBufferPtr;
    remaining   = writeBufferLen;

    while (remaining > 0) {

#if !defined (__TOMMROC_TEMPLATE_ARM_STM32U5_IS_USED__)
        wrAmount = remaining;
#else
        wrAmount = tommRoCMathMin(__SPI_SINGLE_TRANSFER_MAX_SIZE_BYTE__, remaining);
#endif

        TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(
                _spi_master_write_transfer_low_level(
                        spiHandlePtr,
                        ptr,
                        wrAmount,
                        timeoutMsec));

        ptr         += wrAmount;
        remaining   -= wrAmount;
    }

    return TOMMRO_C_HW_ERR_SUCCESS;
}

static tommRoC_hw_err_enum_t _spi_master_read_transfer(
                __tommRoC_hw_spi_master_handle_t__* const   spiHandlePtr,
                uint8_t*                            const   readBufferPtr,
        const   uint16_t                                    toReadAmount,
        const   uint32_t                                    timeoutMsec) {

    uint8_t* ptr;
    uint16_t remaining;
    uint16_t rdAmount;

    ptr         = readBufferPtr;
    remaining   = toReadAmount;

    while (remaining > 0) {

#if !defined (__TOMMROC_TEMPLATE_ARM_STM32U5_IS_USED__)
        rdAmount = remaining;
#else
        rdAmount = tommRoCMathMin(__SPI_SINGLE_TRANSFER_MAX_SIZE_BYTE__, remaining);
#endif

        TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(
                _spi_master_read_transfer_low_level(
                        spiHandlePtr,
                        ptr,
                        rdAmount,
                        timeoutMsec));

        ptr         += rdAmount;
        remaining   -= rdAmount;
    }

    return TOMMRO_C_HW_ERR_SUCCESS;
}

static tommRoC_hw_err_enum_t _spi_master_transceive_transfer(
                __tommRoC_hw_spi_master_handle_t__* const   spiHandlePtr,
        const   uint8_t*                            const   writeBufferPtr,
                uint8_t*                            const   readBufferPtr,
        const   uint16_t                                    bufferLength,
        const   uint32_t                                    timeoutMsec) {

    uint8_t* ptrWr;
    uint8_t* ptrRd;
    uint16_t remaining;
    uint16_t wrRdAmount;

    ptrWr       = (uint8_t*) writeBufferPtr;
    ptrRd       = readBufferPtr;
    remaining   = bufferLength;

    while (remaining > 0) {

#if !defined (__TOMMROC_TEMPLATE_ARM_STM32U5_IS_USED__)
        wrRdAmount = remaining;
#else
        wrRdAmount = tommRoCMathMin(__SPI_SINGLE_TRANSFER_MAX_SIZE_BYTE__, remaining);
#endif

        TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(
                _spi_master_transceive_transfer_low_level(
                        spiHandlePtr,
                        ptrWr,
                        ptrRd,
                        wrRdAmount,
                        timeoutMsec));

        ptrWr       += wrRdAmount;
        ptrRd       += wrRdAmount;
        remaining   -= wrRdAmount;
    }

    return TOMMRO_C_HW_ERR_SUCCESS;
}

static tommRoC_hw_err_enum_t _phy_low_power_enter(__tommRoC_hw_spi_master_handle_t__* const spiHandlePtr) {

    SPI_HandleTypeDef* spiHandleTypePtr = (SPI_HandleTypeDef*) spiHandlePtr->spiPtr;

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(
            tommRoCHwTemplateBusSPISTM32HalSetForLowPowerEnter(
                    spiHandleTypePtr));

    return TOMMRO_C_HW_ERR_SUCCESS;
}

static tommRoC_hw_err_enum_t _phy_low_power_exit(__tommRoC_hw_spi_master_handle_t__* const spiHandlePtr) {

    SPI_HandleTypeDef* spiHandleTypePtr = (SPI_HandleTypeDef*) spiHandlePtr->spiPtr;

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(
            tommRoCHwTemplateBusSPISTM32HalSetForLowPowerExit(
                    spiHandleTypePtr));

    return TOMMRO_C_HW_ERR_SUCCESS;
}
