==> davideferrario/TommRo/libs/02_tommRoCHw/template/bus/env/arm/NXP/tommRoCHwTemplateBusEnvironmentSPIMaster.c <==
#include "bus/env/tommRoCHwTemplateBusEnvironmentSPIMaster.h"
#include "TOMMROC.h"
#include "env/tommRoCTemplateEnv.h"
#include "bus/common/spi/master/tommRoCHwTemplateBusCommonSPIMasterCb.h"
#include "bus/env/arm/NXP/spi/tommRoCHwTemplateBusSPINXPHal.h"
#include "bus/env/arm/NXP/spi/tommRoCHwTemplateBusSPINXPLocation.h"
#include "TOMMROCMw.h"
#include "TOMMROCMwTemplate.h"
#include "fsl_spi.h"
#include "fsl_dspi.h"
#define __DEFAULT_MODE__                (TOMMRO_C_HW_TEMPLATE_BUS_SPI_MASTER_MODE_0)
#define __DEFAULT_BAUDRATE__            (500000)
#define __DEFAULT_ROUTE_LOCATION__      (TOMMROC_HW_TEMPLATE_LOCATION_0)
#define __master_handle_t__             spi_master_handle_t
#define __transfer_t__                  spi_transfer_t
#define __master_config_t__             spi_master_config_t
#define __slave_config_t__              spi_slave_config_t
#define __MasterTransferCreateHandle__  SPI_MasterTransferCreateHandle
#define __MasterTransferNonBlocking__   SPI_MasterTransferNonBlocking
#define __MasterTransferAbort__         SPI_MasterTransferAbort
#define __MasterGetDefaultConfig__      SPI_MasterGetDefaultConfig
#define __master_handle_t__             dspi_master_handle_t
#define __transfer_t__                  dspi_transfer_t
#define __master_config_t__             dspi_master_config_t
#define __slave_config_t__              dspi_slave_config_t
#define __MasterTransferCreateHandle__  DSPI_MasterTransferCreateHandle

static tommRoC_hw_err_enum_t _wait_for_transfer_complete(
                __tommRoC_hw_spi_master_handle_t__* const   spiHandlePtr,
        const   uint32_t                                    timeoutMsec) {

    SPI_Type* spiTypePtr = (SPI_Type*) spiHandlePtr->spiPtr;

#if !defined (__TOMMROC_MW_SEMAPHORE_TEMPLATE_IS_USED__)
    tommRoC_timer_t timer;
    uint32_t elapsedMsec;
#endif

#if defined (__TOMMROC_MW_SEMAPHORE_TEMPLATE_IS_USED__)

    if (TOMMRO_C_MW_ERR_SUCCESS == tommRoCMwSemaphoreWait(&spiHandlePtr->syncSem, timeoutMsec)) {
        if (spiHandlePtr->nxpCallbackData.cbCalled) {
            if ((status_t) kStatus_Success == spiHandlePtr->nxpCallbackData.transferStatus) {
                return TOMMRO_C_HW_ERR_SUCCESS;
            }
#if defined (FSL_FEATURE_SOC_SPI_COUNT) && FSL_FEATURE_SOC_SPI_COUNT
            else if ((status_t) kStatus_SPI_Idle == spiHandlePtr->nxpCallbackData.transferStatus) {
                return TOMMRO_C_HW_ERR_SUCCESS;
            }
#endif
        }
    }

    // NOTE: in case of timeout expired, check again if SUCCESS because it could be the case in multitask environment
    if ((spiHandlePtr->nxpCallbackData.cbCalled) && ((status_t) kStatus_Success == spiHandlePtr->nxpCallbackData.transferStatus)) {
        return TOMMRO_C_HW_ERR_SUCCESS;
    }

#if defined (FSL_FEATURE_SOC_SPI_COUNT) && FSL_FEATURE_SOC_SPI_COUNT
    if ((spiHandlePtr->nxpCallbackData.cbCalled) && ((status_t) kStatus_SPI_Idle == spiHandlePtr->nxpCallbackData.transferStatus)) {
        return TOMMRO_C_HW_ERR_SUCCESS;
    }
#endif

    if (!spiHandlePtr->nxpCallbackData.cbCalled) {
        __MasterTransferAbort__(spiTypePtr, spiHandlePtr->nxpSPIMasterHandlePtr);
    }

    return TOMMRO_C_HW_BUS_OPERATION_FAIL_ERR;
#else

    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCTimerStart(&timer, timeoutMsec));

    do {

        if (spiHandlePtr->nxpCallbackData.cbCalled) {
            if ((status_t) kStatus_Success == spiHandlePtr->nxpCallbackData.transferStatus) {
                return TOMMRO_C_HW_ERR_SUCCESS;
            }

#if defined (FSL_FEATURE_SOC_SPI_COUNT) && FSL_FEATURE_SOC_SPI_COUNT
            else if ((status_t) kStatus_SPI_Idle == spiHandlePtr->nxpCallbackData.transferStatus) {
                return TOMMRO_C_HW_ERR_SUCCESS;
            }
#endif
            else {
                break;
            }
        }

        TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCTimerElapsed(&timer, &elapsedMsec));

        if (elapsedMsec > 1) {
            TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCOsDelayMsec(1));
        }
        else {
#if defined (__TOMMROC_MW_THREAD_TEMPLATE_IS_USED__)
            // NOTE: don't replace with tommRoCOsDelayMsec(0) because as fast as possible is needed in case of single task project.
            tommRoCMwThreadYield();
#endif
        }

    } while (TOMMRO_C_TIMER_NOT_EXPIRED_ERR == tommRoCTimerIsExpired(&timer));

    // NOTE: in case of timeout expired, check again if SUCCESS because it could be the case in multitask environment
    if ((spiHandlePtr->nxpCallbackData.cbCalled) && ((status_t) kStatus_Success == spiHandlePtr->nxpCallbackData.transferStatus)) {
        return TOMMRO_C_HW_ERR_SUCCESS;
    }

#if defined (FSL_FEATURE_SOC_SPI_COUNT) && FSL_FEATURE_SOC_SPI_COUNT
    if ((spiHandlePtr->nxpCallbackData.cbCalled) && ((status_t) kStatus_SPI_Idle == spiHandlePtr->nxpCallbackData.transferStatus)) {
        return TOMMRO_C_HW_ERR_SUCCESS;
    }
#endif

    if (!spiHandlePtr->nxpCallbackData.cbCalled) {
        __MasterTransferAbort__(spiTypePtr, spiHandlePtr->nxpSPIMasterHandlePtr);
    }

    return TOMMRO_C_HW_BUS_OPERATION_FAIL_ERR;
#endif
}

static tommRoC_hw_err_enum_t _spi_master_write_transfer(
                __tommRoC_hw_spi_master_handle_t__* const   spiHandlePtr,
        const   uint8_t*                            const   writeBufferPtr,
        const   uint16_t                                    writeBufferLen,
        const   uint32_t                                    timeoutMsec) {

    __transfer_t__ masterXfer;

    tommRoCUtilMemSet(&masterXfer, 0, sizeof(masterXfer));

    masterXfer.txData       = (uint8_t*) writeBufferPtr;
    masterXfer.rxData       = NULL;
    masterXfer.dataSize     = (size_t) writeBufferLen;
    // NOTE: for SPI, control flag is useless to.
#if defined (FSL_FEATURE_SOC_DSPI_COUNT) && FSL_FEATURE_SOC_DSPI_COUNT
    masterXfer.configFlags  = kDSPI_MasterCtar0 | kDSPI_MasterPcs0 | kDSPI_MasterPcsContinuous;
#endif

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(_spi_master_transfer(spiHandlePtr, &masterXfer, timeoutMsec));

    return TOMMRO_C_HW_ERR_SUCCESS;
}

static tommRoC_hw_err_enum_t _spi_master_read_transfer(
                __tommRoC_hw_spi_master_handle_t__* const   spiHandlePtr,
                uint8_t*                            const   readBufferPtr,
        const   uint16_t                                    toReadAmount,
        const   uint32_t                                    timeoutMsec) {

    __transfer_t__ masterXfer;

    tommRoCUtilMemSet(&masterXfer, 0, sizeof(masterXfer));

    masterXfer.txData       = NULL;
    masterXfer.rxData       = readBufferPtr;
    masterXfer.dataSize     = (size_t) toReadAmount;
    // NOTE: for SPI, control flag is useless to.
#if defined (FSL_FEATURE_SOC_DSPI_COUNT) && FSL_FEATURE_SOC_DSPI_COUNT
    masterXfer.configFlags  = kDSPI_MasterCtar0 | kDSPI_MasterPcs0 | kDSPI_MasterPcsContinuous;
#endif

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(_spi_master_transfer(spiHandlePtr, &masterXfer, timeoutMsec));

    return TOMMRO_C_HW_ERR_SUCCESS;
}

static tommRoC_hw_err_enum_t _spi_master_transceive_transfer(
                __tommRoC_hw_spi_master_handle_t__* const   spiHandlePtr,
        const   uint8_t*                            const   writeBufferPtr,
                uint8_t*                            const   readBufferPtr,
        const   uint16_t                                    bufferLength,
        const   uint32_t                                    timeoutMsec) {

    __transfer_t__ masterXfer;

    tommRoCUtilMemSet(&masterXfer, 0, sizeof(masterXfer));

    masterXfer.txData       = (uint8_t*) writeBufferPtr;
    masterXfer.rxData       = readBufferPtr;
    masterXfer.dataSize     = (size_t) bufferLength;
    // NOTE: for SPI, control flag is useless to.
#if defined (FSL_FEATURE_SOC_DSPI_COUNT) && FSL_FEATURE_SOC_DSPI_COUNT
    masterXfer.configFlags  = kDSPI_MasterCtar0 | kDSPI_MasterPcs0 | kDSPI_MasterPcsContinuous;
#endif

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(_spi_master_transfer(spiHandlePtr, &masterXfer, timeoutMsec));

    return TOMMRO_C_HW_ERR_SUCCESS;
}

static tommRoC_hw_err_enum_t _phy_low_power_enter(
        const   tommRoC_hw_template_bus_spi_master_enum_t   spiMaster,
        const   tommRoC_hw_template_bus_location_enum_t     location) {

    tommRoC_hw_template_bus_spi_nxp_location_t locationConfig;

    TOMMROC_HW_ASSERT_TOMMROC_HW_LIB_FUNCT_SUCCESS(
            tommRoCHwTemplateBusSPINXPLocationGetMaster(
                    spiMaster,
                    location,
                    &locationConfig));

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(
            tommRoCHwTemplateBusSPINXPHalSetForLowPowerEnter(
                    &locationConfig));

    return TOMMRO_C_HW_ERR_SUCCESS;
}

static tommRoC_hw_err_enum_t _phy_low_power_exit(
        const   tommRoC_hw_template_bus_spi_master_enum_t   spiMaster,
        const   tommRoC_hw_template_bus_location_enum_t     location) {

    tommRoC_hw_template_bus_spi_nxp_location_t locationConfig;

    TOMMROC_HW_ASSERT_TOMMROC_HW_LIB_FUNCT_SUCCESS(
            tommRoCHwTemplateBusSPINXPLocationGetMaster(
                    spiMaster,
                    location,
                    &locationConfig));

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(
            tommRoCHwTemplateBusSPINXPHalSetForLowPowerExit(
                    &locationConfig));

    return TOMMRO_C_HW_ERR_SUCCESS;
}
